--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: [UI Sleuth]
-description: [A Xamarin.Forms Inspector]
+title: UI Sleuth
+description: A Xamarin.Forms Inspector
