--- a/Desktop/app/package.json
+++ b/Desktop/app/package.json
@@ -14,7 +14,8 @@
     "electron-squirrel-startup": "^1.0.0",
     "fs-extra": "^2.0.0",
     "fs-jetpack": "^0.10.2",
-    "jquery": "^2.2.4"
+    "jquery": "^2.2.4",
+    "vm2": "^3.5.0"
   },
   "optionalDependencies": {
     "node-ios-device": "^1.3.1"
